# media-player

./: .gitignore  README.md  audio_device_selector.py  build.py  config_editor.py  download.json  hello.py  mediaPlayer.py  mediaPlayerPi.py  pyproject.toml  version.txt  videoPlayer.py  ydAudioPlayer.py  ydMediaPlayer.py  ydMediaPlayerPiBtn.py  ydMediaPlayerSerial.py  ydPlayer.json  ydPlayer.py  ydPlayerBtns.json  ydPlayerBtns.py  ydPlayerNew.json  ydPlayerNew.py
