[project]
name = "media-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inputimeout>=1.0.4",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "pyinstaller>=6.12.0",
    "pyserial>=3.5",
    "requests>=2.32.3",
]
